kotlin-kafka-reactive-web/deployment/reactive-web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-web-service
  labels:
    app: reactive-web-service
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  #      deploymentconfig: gen-reactve
  selector:
    app: reactive-web-service
  type: ClusterIP # this must work with route
